# ambient-provider

./: .env.example  .gitignore  Dockerfile  README.md  REFACTORING_SUMMARY.md  THIRD-PARTY-NOTICES.md  TRANSCRIPTION_JOBS_API.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 62b49d06c3fe_rename_audio_url_to_audio_key.py  6edb909fafd4_initial_scribehub_schema.py  6feb3623ada4_initial_schema.py  8c0bc5ecc175_initial_schema.py
ambient-scribe/: Makefile
ambient-scribe/apps/api/: dot_env_example  pyproject.toml
ambient-scribe/apps/api/ambient_scribe/: deps.py  main.py  models.py
ambient-scribe/apps/api/ambient_scribe/routers/: health.py  notes.py  templates.py  transcribe.py  whisperx.py
ambient-scribe/apps/api/ambient_scribe/services/: ambient-provider.code-workspace  asr.py  guardrails.py  llm.py  suggestions.py  templates.py  whisperx_service.py
ambient-scribe/apps/api/ambient_scribe/utils/: storage.py  timecodes.py
ambient-scribe/apps/api/templates/: progress_note.j2  soap_default.j2
ambient-scribe/apps/ui/: .env.example  index.html  kui-react-0.402.1.tgz  nv-brand-assets-icons-3.8.0.tgz  nv-brand-assets-react-icons-inline-3.8.0.tgz  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
ambient-scribe/infra/: compose.dev.yml  compose.prod.yml
ambient-scribe/infra/docker/: api.Dockerfile  default.conf  nginx.ubuntu.Dockerfile  ui-default.conf  ui-nginx.conf  ui.Dockerfile  ui.dev.Dockerfile
ambient-scribe/sample_data/: sample_transcript.json
ambient-scribe/scripts/: restart-production.sh  seed_templates.py  validate-env.sh
ambient_scribe/: __init__.py  auth.py  database.py  db_models.py  deps.py  main.py  models.py  stream_broker.py
ambient_scribe/consumers/: __init__.py  result_consumer.py
ambient_scribe/middleware/: auth.py
ambient_scribe/models/: __init__.py
ambient_scribe/models/api/: __init__.py  common_schema.py  notes_schema.py  stream_messages.py  templates_schema.py  transcripts_schema.py
ambient_scribe/models/database/: __init__.py  contexts_model.py  notes_model.py  sessions_model.py  templates_model.py  transcripts_model.py  users_model.py  workspaces_model.py
ambient_scribe/repositories/: __init__.py  context_repository.py  note_repository.py  rating_repository.py  session_repository.py  template_repository.py  transcript_job_repository.py  transcript_repository.py  user_repository.py  workspace_repository.py
ambient_scribe/routers/: __init__.py  auth.py  contexts.py  health.py  notes.py  sessions.py  templates.py  transcribe.py  transcribe_jobs.py  whisperx.py  workspaces.py
ambient_scribe/scripts/seeds/: seed_contexts.py
ambient_scribe/services/: __init__.py  ambient-provider.code-workspace  asr.py  domain_manager.py  guardrails.py  llm.py  redis_client.py  suggestions.py  templates.py  transcription_service.py  whisperx_service.py
ambient_scribe/services/redis/: __init__.py  job_manager.py  publisher.py  subscriber.py
ambient_scribe/services/storage/: __init__.py  s3_storage.py  (+1 more)
ambient_scribe/utils/: __init__.py  storage.py  timecodes.py
ambient_scribe/workers/: __init__.py  job_context.py  job_processor.py  transcription.py
templates/: custom_example.j2  soap_detailed.j2
(+13 files in other folders)
