[project]
name = "ambientprovider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dotenv==0.9.9",
    "gradio==5.31.0",
    "ipykernel==6.30.1",
    "ipython==9.3.0",
    "librosa==0.11.0",
    "nemoguardrails==0.16.0",
    "numpy==2.1.3",
    "nvidia-riva-client==2.19.1",
    "openai==1.81.0",
    "pyaudio==0.2.14",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.0",
    "slowapi>=0.1.9",
    "soundfile==0.13.1",
    "uvicorn==0.35.0",
]
