[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-scribe-api"
version = "0.1.0"
description = "Ambient Scribe API - FastAPI backend for medical transcription and note generation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi==0.118.0",
    "uvicorn[standard]==0.35.0",
    "python-multipart==0.0.20",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "jinja2==3.1.6",
    "aiofiles==24.1.0",
    "python-dotenv==1.1.0",
    "httpx==0.28.1",
    "openai==1.81.0",
    "nvidia-riva-client==2.19.1",
    "librosa==0.11.0",
    "soundfile==0.13.1",
    "numpy==2.1.3",
    "nemoguardrails==0.16.0",
    "langchain-nvidia-ai-endpoints==0.3.18",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "isort==6.0.1",
    "black==25.9.0",
    "email-validator==2.3.0",
    "greenlet==3.3.0",
    "gradio==5.31.0",
    "ipykernel==6.30.1",
    "ipython==9.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.12.8",
]

[tool.setuptools]
packages = ["ambient_scribe"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py313"
